--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "syrinx-dark-syntax",
   "theme": "syntax",
-  "version": "0.0.1",
-  "description": "A syntax theme based on Atom's One Dark, with lower contrast and italics.",
+  "version": "0.1.0",
+  "description": "A syntax theme based on Artic Ice Studio Nord and Nord Atom Syntax with some personal touches and italics.",
   "keywords": [
     "dark",
     "blue",
